--- a/android/app/expo.gradle
+++ b/android/app/expo.gradle
@@ -13,15 +13,15 @@ afterEvaluate {
     def expoRoot = file("../../")
     def inputExcludes = ["android/**", "ios/**"]
 
-    task exponentPrebuildStep(type: Exec) {
-        workingDir expoRoot
-        if (Os.isFamily(Os.FAMILY_WINDOWS)) {
-            commandLine "cmd", "/c", ".\\android\\detach-scripts\\run-exp.bat"
-        } else {
-            commandLine "./android/detach-scripts/run-exp.sh", "prepare-detached-build", "--platform", "android", expoRoot
-        }
-    }
-    // runBefore("preBuild", exponentPrebuildStep)
+    // task exponentPrebuildStep(type: Exec) {
+    //     workingDir expoRoot
+    //     if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+    //         commandLine "cmd", "/c", ".\\android\\detach-scripts\\run-exp.bat"
+    //     } else {
+    //         commandLine "./android/detach-scripts/run-exp.sh", "prepare-detached-build", "--platform", "android", expoRoot
+    //     }
+    // }
+    // runBefore("preBuild", exponentPrebuildStep) // GLG
 
     // Based on https://github.com/facebook/react-native/blob/master/react.gradle
     // Grab all build types and product flavors
@@ -63,11 +63,11 @@ afterEvaluate {
                 // Set up the call to exp
                 workingDir expoRoot
 
-                if (Os.isFamily(Os.FAMILY_WINDOWS)) {
-                    commandLine("cmd", "/c", ".\\android\\detach-scripts\\run-exp.bat", "bundle-assets", expoRoot, "--platform", "android", "--dest", assetsDir)
-                } else {
-                    commandLine("./android/detach-scripts/run-exp.sh", "bundle-assets", expoRoot, "--platform", "android", "--dest", assetsDir)
-                }
+                // if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+                //     commandLine("cmd", "/c", ".\\android\\detach-scripts\\run-exp.bat", "bundle-assets", expoRoot, "--platform", "android", "--dest", assetsDir)
+                // } else {
+                //     commandLine("./android/detach-scripts/run-exp.sh", "bundle-assets", expoRoot, "--platform", "android", "--dest", assetsDir)
+                // } // GLG
 
                 enabled targetName.toLowerCase().contains("release") || targetName.toLowerCase().contains("prod")
             }
